--- a/loginPage.html
+++ b/loginPage.html
@@ -2,33 +2,18 @@
 <html>
 
 <!-- Font Awesome -->
-<link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-  rel="stylesheet"
-/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 <!-- Google Fonts -->
-<link
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-  rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 <!-- MDB -->
-<link
-  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css"
-  rel="stylesheet"
-/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css" rel="stylesheet" />
 
-<link
-  href="css\loginPage.css"
-  rel="stylesheet"
-/>
+<link href="css\loginPage.css" rel="stylesheet" />
 
 
 
 <!-- MDB -->
-<script
-  type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"
-></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
@@ -49,7 +34,8 @@
         </div>
       </div>
       <div class="separator separator-bottom separator-skew zindex-100">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
+          xmlns="http://www.w3.org/2000/svg">
           <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
         </svg>
       </div>
@@ -63,11 +49,13 @@
               <div class="text-muted text-center mt-2 mb-3"><small>Login in with</small></div>
               <div class="btn-wrapper text-center">
                 <a href="#" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon"><img src="https://raw.githack.com/creativetimofficial/argon-dashboard/gh-pages/assets-old/img/icons/common/github.svg"></span>
+                  <span class="btn-inner--icon"><img
+                      src="https://raw.githack.com/creativetimofficial/argon-dashboard/gh-pages/assets-old/img/icons/common/github.svg"></span>
                   <span class="btn-inner--text">Github</span>
                 </a>
                 <a href="#" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon"><img src="https://raw.githack.com/creativetimofficial/argon-dashboard/gh-pages/assets-old/img/icons/common/google.svg"></span>
+                  <span class="btn-inner--icon"><img
+                      src="https://raw.githack.com/creativetimofficial/argon-dashboard/gh-pages/assets-old/img/icons/common/google.svg"></span>
                   <span class="btn-inner--text">Google</span>
                 </a>
               </div>
@@ -82,7 +70,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input id = "emailId" class="form-control" placeholder="Email" type="email">
+                    <input id="emailId" class="form-control" placeholder="Email" type="email">
                   </div>
                 </div>
                 <div class="form-group">
@@ -90,7 +78,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input id = "pwd" class="form-control" placeholder="Password" type="password">
+                    <input id="pwd" class="form-control" placeholder="Password" type="password">
                   </div>
                 </div>
                 <div class="custom-control custom-control-alternative custom-checkbox">
@@ -100,7 +88,7 @@
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="button"  class="btn login btn-primary my-4 login">Login in</button>
+                  <button type="button" class="btn login btn-primary my-4 login">Login in</button>
                 </div>
               </form>
             </div>
@@ -118,7 +106,11 @@
     </div>
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
   <script src="js\loginPage.js"></script>
 
+
 </body>
+
 </html>
