--- a/allUpcomingTripsPage.html
+++ b/allUpcomingTripsPage.html
@@ -1,96 +1,92 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="css/allUpcomingTripsPage.css" rel="stylesheet" />
-    <title>allUpcomingTripsPage!</title>
-  </head>
-  <body>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--  Nav Bar -->
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="css/allUpcomingTripsPage.css" rel="stylesheet" />
+  <title>allUpcomingTripsPage!</title>
+</head>
 
-       
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="">Crop Air</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarNav">
-          <ul class="navbar-nav ms-auto ">
-            <li class="nav-item ">
-              <a class="nav-link active" aria-current="page" href="/homePage">Home</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="/upcomingTrips">Upcoming Trips</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="/profilePage">Profile</a>
-            </li>
-            
-          </ul>
+<body>
+
+  <!--  Nav Bar -->
+
+
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="">Crop Air</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item ">
+            <a class="nav-link active" aria-current="page" href="/homePage">Home</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="/upcomingTrips">Upcoming Trips</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="/profilePage">Profile</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+  <div class="row">
+    <div class="col-sm-6 upcoming-trips-card">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title card-text">Upcoming Trips</h5>
         </div>
       </div>
-    </nav>
+    </div>
+
+    <div class="container-fluid">
+      <form class="d-flex" id="searchBar">
+        <input class="form-control me-2" type="search" placeholder="Enter Flight Number ? " aria-label="Search">
+        <button class="btn btn-outline-primary bt-light rounded-pill" type="submit">Search </button>
+      </form>
+    </div>
+  </div>
 
 
+  <!-- Upcoming Trips Cards -->
 
-          <div class="row">
-            <div class="col-sm-6 upcoming-trips-card">
-              <div class="card text-center">
-                <div class="card-body">
-                  <h5 class="card-title card-text">Upcoming Trips</h5>
-               </div>
-              </div>
-            </div>
+  <div class="row">
+    <div id = "flightRow" class="col-sm-12">
+    </div>
 
-            <div class="container-fluid">
-              <form class="d-flex"  id="searchBar">
-                <input class="form-control me-2" type="search" placeholder="Enter Flight Number ? " aria-label="Search">
-                <button class="btn btn-outline-primary bt-light rounded-pill" type="submit">Search </button>
-              </form>
-            </div></div>
+  </div>
 
 
-<!-- Upcoming Trips Cards -->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">LAS TO BLE</h5>
-                  <p class="card-text">Flight takes of at 10:00 AM.</p>
-                  <a href="/seatBooking" class="btn btn-primary position rounded-pill trip-button">Check in</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">LAS TO BLE</h5>
-                  <p class="card-text">Flight takes of at 10:00 AM.</p>
-                  <a href="/seatBooking" class="btn btn-primary position  rounded-pill trip-button">Check in</a>
-                </div>
-              </div>
-            </div>
-          </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
+  <script src="js\allUpcomingTripsPage.js"></script>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
 
 </html>
